--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "classnames": "^2.2.6",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "react-slideshow-image": "^1.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
