--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.5",
+    "react-scroll": "^1.7.10",
+    "react-scrollable-anchor": "^0.6.1",
     "react-slideshow-image": "^1.0.8"
   },
   "scripts": {
